# webrtc_rc_control

./: .gitignore  CMakeLists.txt  README.md  run_main.sh  run_web.sh
include/rtc/: description.hpp
src/: config.h  h264_common.cc  h264_common.h  main.cpp  mmalcam.c  mmalcam.h  viewfinder.c  viewfinder.h
webroot/: index.html
webroot/css/: main.css
webroot/js/: connection.js  main.js
